# quasi_drug

./: .env  .gitignore  UV_GUIDE.md  baropharm_state.json  check_saeropharm.py  check_saeropharm2.py  check_saeropharm3.py  check_saeropharm_login.py  competitor_raw.csv  dropped_baro.json  dropped_baro_2100.json  dump_saeropharm.py  hmp_state.json  index.html  main.py  order.md  package-lock.json  package.json  platpharm_state.json  process_csv.py  pyproject.toml  run_monthly_scraper.ps1  run_monthly_scraper.sh  run_saeropharm_interactive.py  run_test_baro_plat.py  saeropharm_event_page.html  saeropharm_ingEvent.html  saeropharm_state.json  scratch_catdict.py  scratch_catfix.py  scratch_fix_shifted_columns.py  scratch_update_brand_details.py  temp_baro_titles.txt  vite.config.js
data/: 2604_baropharm.csv  2604_hmp.csv  2604_platpharm.csv  2604_saeropharm.csv  competitor_events_report.md  competitor_raw_260421_1309.csv  marketing_report.txt  vision_analysis_plan.md
data/Vivlab/: 비브랩_제안서.md
data/baropharm/: 2604_baropharm-0 - 2604_baropharm.csv  BaropharmBenchmarkReport.jsx  baropharm_events_260421_0908.csv  baropharm_events_260421_1319.csv  baropharm_events_260421_1615.csv
output/: marketing_analysis_260218.md  경쟁사_이벤트_벤치마크_2604.md
scrapers/: baropharm_product.py  baropharm_scraper.py  base.py  bot_helper.py  date_utils.py  hmp_scraper.py  platpharm.py  platpharm_scraper.py  saeropharm_scraper.py
scripts/: marketing_analysis.py  merge_overrides.py  merge_raw.py  run_baropharm_products.py  scrape_platpharm.py  split_category.py
src/: App.jsx
(+35 files in other folders)
