[project]
name = "quasi-drug"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.11.0",
    "beautifulsoup4>=4.14.3",
    "pandas>=3.0.1",
    "playwright>=1.58.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
